--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nysoftusa</groupId>
-    <artifactId>TDD-WebAutomation-Framework_QE_SUMMER2022</artifactId>
+    <artifactId>TDD_Framework_Learn</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
